Time overlap corrected

--- a/src/app/chat-window/chat-window.component.css
+++ b/src/app/chat-window/chat-window.component.css
@@ -234,18 +234,22 @@ margin-right: 20px;
 .msg_time{
 position: relative;
 left: 0;
-bottom: -15px;
+bottom: -10px;
 color: rgba(255,255,255,0.5);
 font-size: 10px;
-float: right;
+display: inline-block;
+overflow-wrap: normal;
+justify-content: space-between;
 }
 .msg_time_send{
 position: relative;
 right:0;
-bottom: -15px;
+bottom: -10px;
 color: rgba(15, 15, 15, 0.5);
 font-size: 10px;
-float: right;
+display: inline-block;
+overflow-wrap: normal;
+justify-content: space-between;
 }
 .msg_head{
 position: relative;
